# Dark-Hole

./: .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
darkhole/: __init__.py  client.py  config.py  sphinx.py
darkhole/crypto/: __init__.py  aead.py  errors.py  hashes.py  hkdf.py  kdf_chain.py  opaque.py  packet_layer.py  primitives.py  random.py  ratchet.py  reputation.py  serialization.py  x25519.py
darkhole/crypto/sphinx/: __init__.py  sphinx.py
darkhole/dht/: __init__.py  client.py  interfaces.py  messages.py  node.py  overlay.py  pir.py  record.py  reputation.py  traffic.py
darkhole/packet/: __init__.py  fountain.py  padding.py  schema.py
darkhole/relay/: __init__.py
darkhole/transport/: __init__.py
docs/: ARCHITECTURE.md  PROTOCOL.md  README.md
docs/protocol/: sphinx_routing.md
examples/: README.md  basic_client.py
tests/: __init__.py  conftest.py  test_dht.py  test_fountain.py  test_ratchet.py  test_sphinx.py
tests/unit/: test_client.py  test_config.py  test_crypto.py  test_dht.py  test_packet.py
